<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:padding="30dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/img"
    android:layout_height="match_parent"
    tools:context=".landing">
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/landing_controls"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="500dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="93dp"
            android:layout_height="86dp"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_margin="20dp"
            tools:layout_editor_absoluteY="106dp"/>

        <TextView
            android:id="@+id/appname"
            android:layout_width="266dp"
            android:layout_height="46dp"
            android:text="@string/mediconnect"
            android:textColor="@color/text"
            android:textSize="34sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="127dp" />


        <TextView
            android:id="@+id/urDiag"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="25dp"
            android:text="Your Diagnosis. Your Health. Your Way"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="211dp" />



    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:id="@+id/readMore"
        android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/large_text"
        android:layout_margin="16dp"
        android:textSize="20sp"/>
    </ScrollView>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/text"
        android:text="Register"
        android:alpha="0.9"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:visibility="visible"
        android:background="@drawable/button_design"
        app:strokeColor="#AA2626"
        android:layout_margin="15dp"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="541dp" />

    <Button
        android:id="@+id/buttonReadMore"
        android:layout_width="151dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/text"
        android:text="@string/read_more"
        android:alpha="0.9"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/button_design"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="541dp"
        android:onClick="toggleDetails"/>

</LinearLayout>